♻️ code reformat: class to record, fix typo etc